# fast-api-boilerplate

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/app/: config.py  database.py  main.py  models.py
src/app/routers/: user.py
